--- a/public/views/drivers.html
+++ b/public/views/drivers.html
@@ -630,7 +630,7 @@
         }
         
         .driver-card:hover .driver-avatar i {
-            color: #0d6efd !important;
+            color: var(--primary) !important;
         }
         
         .info-item {
@@ -648,7 +648,7 @@
         }
         
         .review-item {
-            border-left: 3px solid #0d6efd;
+            border-left: 3px solid var(--primary);
         }
         
         .stat-item {
