--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -621,7 +621,7 @@
         }
         
         .profile-avatar:hover i {
-            color: #0a58ca !important;
+            color: var(--primary) !important;
         }
         
         .profile-stats {
@@ -635,7 +635,7 @@
         }
         
         .trip-item:hover {
-            border-color: #0d6efd !important;
+            border-color: var(--primary) !important;
             background-color: #f8f9ff;
         }
         
@@ -650,8 +650,8 @@
         }
         
         .form-check-input:checked {
-            background-color: #0d6efd;
-            border-color: #0d6efd;
+            background-color: var(--primary);
+            border-color: var(--primary);
         }
         
         .nav-tabs .nav-link {
@@ -659,7 +659,7 @@
         }
         
         .nav-tabs .nav-link.active {
-            color: #0d6efd;
+            color: var(--primary);
             border-color: #dee2e6 #dee2e6 #fff;
         }
         
