--- a/public/views/trips.html
+++ b/public/views/trips.html
@@ -23,21 +23,21 @@
                     <li class="nav-item">
                         <a class="nav-link" href="../index.html">Trang chủ</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" id="booking-nav">
                         <a class="nav-link" href="booking.html">Đặt xe</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" id="trips-nav">
                         <a class="nav-link active" href="trips.html">Chuyến đi</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" id="drivers-nav">
                         <a class="nav-link" href="drivers.html">Tài xế</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" id="promos-nav">
                         <a class="nav-link" href="promotions.html">Khuyến mãi</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
-                    <li class="nav-item dropdown" id="user-menu" style="display: none;">
+                    <li class="nav-item dropdown d-none" id="user-nav">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
                             <i class="fas fa-user"></i> <span id="user-name"></span>
                         </a>
@@ -47,8 +47,8 @@
                             <li><a class="dropdown-item" href="#" onclick="logout()">Đăng xuất</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item" id="auth-btn">
-                        <button class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#authModal">
+                    <li class="nav-item" id="auth-nav">
+                        <button id="auth-btn" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#authModal">
                             Đăng nhập
                         </button>
                     </li>
@@ -66,7 +66,7 @@
                 <p class="text-muted">Quản lý và theo dõi các chuyến đi</p>
             </div>
             <div class="col-md-4 text-end">
-                <a href="booking.html" class="btn btn-primary">
+                <a id="book-new-btn" href="booking.html" class="btn btn-primary">
                     <i class="fas fa-plus me-2"></i>Đặt xe mới
                 </a>
             </div>
@@ -266,7 +266,7 @@
                                 <i class="fas fa-car fa-3x text-muted mb-3"></i>
                                 <h5>Chưa có chuyến đi nào</h5>
                                 <p class="text-muted">Hãy đặt chuyến đi đầu tiên của bạn!</p>
-                                <a href="booking.html" class="btn btn-primary">
+                                <a href="booking.html" class="btn btn-primary book-now-btn">
                                     <i class="fas fa-plus me-2"></i>Đặt xe ngay
                                 </a>
                             </div>
